docs/logs/20260124_vector_16_errors.log
error[E0308]: mismatched types
    --> /tmp/test_vector.rs:3171:16
     |
3170 |     pub fn select_on_container_copy_construction(__rhs: &std::ffi::c_void) -> std::ffi::c_void {
     |                                                                               ---------------- expected `c_void` because of return type
3171 |         return __rhs.clone();
     |                ^^^^^^^^^^^^^ expected `c_void`, found `&c_void`
     |
note: `c_void` does not implement `Clone`, so `&c_void` was cloned instead
    --> /tmp/test_vector.rs:3171:16
     |
3171 |         return __rhs.clone();
     |                ^^^^^

error[E0061]: this function takes 3 arguments but 1 argument was supplied
    --> /tmp/test_vector.rs:3622:34
     |
3622 |         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
     |                                  ^^^^^^^^^^^^^^^^------- two arguments of type `usize` and `usize` are missing
     |
note: expected `*const ()`, found `f32`
    --> /tmp/test_vector.rs:3622:51
     |
3622 |         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
     |                                                   ^^^^^
     = note: expected raw pointer `*const ()`
                       found type `f32`
note: associated function defined here
    --> /tmp/test_vector.rs:3585:12
     |
3585 |     pub fn hash(__ptr: *const (), __clength: usize, __seed: usize) -> usize {
     |            ^^^^ ----------------  ----------------  -------------
help: provide the arguments
     |
3622 -         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
3622 +         return if __val != 0.0 { _Hash_impl::hash(/* *const () */, /* usize */, /* usize */) } else { 0 };
     |

error[E0061]: this function takes 3 arguments but 1 argument was supplied
    --> /tmp/test_vector.rs:3641:34
     |
3641 |         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
     |                                  ^^^^^^^^^^^^^^^^------- two arguments of type `usize` and `usize` are missing
     |
note: expected `*const ()`, found `f64`
    --> /tmp/test_vector.rs:3641:51
     |
3641 |         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
     |                                                   ^^^^^
     = note: expected raw pointer `*const ()`
                       found type `f64`
note: associated function defined here
    --> /tmp/test_vector.rs:3585:12
     |
3585 |     pub fn hash(__ptr: *const (), __clength: usize, __seed: usize) -> usize {
     |            ^^^^ ----------------  ----------------  -------------
help: provide the arguments
     |
3641 -         return if __val != 0.0 { _Hash_impl::hash(__val) } else { 0 };
3641 +         return if __val != 0.0 { _Hash_impl::hash(/* *const () */, /* usize */, /* usize */) } else { 0 };
     |

error[E0599]: no method named `op_add` found for reference `&_Bit_iterator` in the current scope
    --> /tmp/test_vector.rs:3871:23
     |
3871 |         return *(self.op_add(__i)).op_deref();
     |                       ^^^^^^ method not found in `&_Bit_iterator`

error[E0599]: no method named `op_add` found for reference `&_Bit_const_iterator` in the current scope
    --> /tmp/test_vector.rs:3940:23
     |
3940 |         return *(self.op_add(__i)).op_deref();
     |                       ^^^^^^ method not found in `&_Bit_const_iterator`

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4394:16
     |
4393 |     pub fn min() -> std::ffi::c_void {
     |                     ---------------- expected `c_void` because of return type
4394 |         return 0;
     |                ^ expected `c_void`, found integer

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4398:16
     |
4397 |     pub fn max() -> std::ffi::c_void {
     |                     ---------------- expected `c_void` because of return type
4398 |         return 0 as _Sp___rep;
     |                ^^^^^^^^^^^^^^ expected `c_void`, found `_Sp___rep`

error[E0605]: non-primitive cast: `{integer}` as `_Sp___rep`
    --> /tmp/test_vector.rs:4398:16
     |
4398 |         return 0 as _Sp___rep;
     |                ^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4402:16
     |
4401 |     pub fn lowest() -> std::ffi::c_void {
     |                        ---------------- expected `c_void` because of return type
4402 |         return numeric_limits::min();
     |                ^^^^^^^^^^^^^^^^^^^^^ expected `c_void`, found `isize`

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4437:16
     |
4436 |     pub fn min() -> std::ffi::c_void {
     |                     ---------------- expected `c_void` because of return type
4437 |         return 0;
     |                ^ expected `c_void`, found integer

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4441:16
     |
4440 |     pub fn max() -> std::ffi::c_void {
     |                     ---------------- expected `c_void` because of return type
4441 |         return 0 as _Sp___rep;
     |                ^^^^^^^^^^^^^^ expected `c_void`, found `_Sp___rep`

error[E0605]: non-primitive cast: `{integer}` as `_Sp___rep`
    --> /tmp/test_vector.rs:4441:16
     |
4441 |         return 0 as _Sp___rep;
     |                ^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4445:16
     |
4444 |     pub fn lowest() -> std::ffi::c_void {
     |                        ---------------- expected `c_void` because of return type
4445 |         return numeric_limits::min();
     |                ^^^^^^^^^^^^^^^^^^^^^ expected `c_void`, found `isize`

error[E0599]: no method named `is_equal` found for reference `&c_void` in the current scope
    --> /tmp/test_vector.rs:4559:93
     |
4559 |         return &*__a as *const std::ffi::c_void == &*__b as *const std::ffi::c_void || *__a.is_equal(*__b);
     |                                                                                             ^^^^^^^^ method not found in `&c_void`

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4568:17
     |
4568 |     v.push_back(1i32);
     |       --------- ^^^^ expected `&c_void`, found `i32`
     |       |
     |       arguments to this method are incorrect
     |
note: method defined here
    --> /tmp/test_vector.rs:435:12
     |
 435 |     pub fn push_back(&mut self, __x: &std::ffi::c_void) {
     |            ^^^^^^^^^            ----------------------

error[E0308]: mismatched types
    --> /tmp/test_vector.rs:4569:17
     |
4569 |     v.push_back(2i32);
     |       --------- ^^^^ expected `&c_void`, found `i32`
     |       |
     |       arguments to this method are incorrect
     |
note: method defined here
    --> /tmp/test_vector.rs:435:12
     |
 435 |     pub fn push_back(&mut self, __x: &std::ffi::c_void) {
     |            ^^^^^^^^^            ----------------------

warning: function cannot return without recursing
    --> /tmp/test_vector.rs:4545:9
     |
4545 |         fn do_allocate(&self, __bytes: usize, __alignment: usize) -> *mut () {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
4546 |             self.do_allocate(__bytes, __alignment)
     |             -------------------------------------- recursive call site
     |
     = help: a `loop` may express intention better if this is on purpose
     = note: `#[warn(unconditional_recursion)]` on by default

warning: function cannot return without recursing
    --> /tmp/test_vector.rs:4548:9
     |
4548 |         fn do_deallocate(&self, __p: *mut (), __bytes: usize, __alignment: usize) {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
4549 |             self.do_deallocate(__p, __bytes, __alignment)
     |             --------------------------------------------- recursive call site
     |
     = help: a `loop` may express intention better if this is on purpose

warning: function cannot return without recursing
    --> /tmp/test_vector.rs:4551:9
     |
4551 |         fn do_is_equal(&self, __other: &std::ffi::c_void) -> bool {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
4552 |             self.do_is_equal(__other)
     |             ------------------------- recursive call site
     |
     = help: a `loop` may express intention better if this is on purpose

error: aborting due to 16 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0061, E0308, E0599, E0605.
For more information about an error, try `rustc --explain E0061`.
